CompiladorSolstice/Solstice.atg
COMPILER Solstice
/*--------------------------------------------------------------------------*/
CHARACTERS
  letra = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz".
  letraU = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".
  digito = "0123456789".
  rc  = '\r'.
  sl  = '\n'.
  tab = '\t'.
  otrosC = ANY - '/' - '*'.
  otrosS = ANY - '"' - rc - sl - tab.
	
TOKENS
  idV = '_'letra {letra | digito}. /* Id Variable */
  idM = '#' letra {letra | digito}. /* Id Metodo */
  idO = letraU {letra | digito}. /* Id Objeto Nombre de la Clase */
  idC = '$' letraU {letra | digito}. /* Id Constructor */
  cteI = digito {digito}.
  cteD = digito {digito} "." digito {digito} .
  cteS = '\"' otrosS {otrosS} '\"'.
  cteB = "true" | "false".
  tCla = "class".
  tPub = "public".
  tPri = "private".	
  tPro = "protect".	
  tRet = "return".		
  tStr = "string".		
  tInt = "int". 		
  tDou = "double".
  tBoo = "bool".		
  tNew = "new".		
  tVoi = "void".		
  tCon = "if" | "?".		
  tEls = "else" | ":".
  tEif = "elseif" | ":?".  
  tWhi = "while" | "@".
  tExt = '-''>'.
  tMai = "main".
  tLec = '>''>'.
  tEsc = '<''<'.
  tInc = '+''+'.
  tDec = '-''-'.
  tMay = '>''='.
  tMen = '<''='.
  tDif = '<''>'.
  tEqu = '=''='.

PRAGMAS
	comentarios = "/*" {'/' | otrosC | '*' {'*'} otrosC} '*' {'*'} '/'.
	
IGNORE rc + sl + tab

PRODUCTIONS
	Solstice = Class Main.
	Arr = '[' (idV | cteI) ']'.
	Asig = ((tInc | tDec | Asig2) | Arr Asig2) ';'.
	Asig2 = '=' Expresion.
	Atributo = Vis Tipo idV ';'.
	Bloque = Atributo{Atributo} Constructor {Vis (MetodoR | MetodoV)}.
	Ciclo = tWhi '(' Expresion ')' '{' {Estatuto} '}'.
	Class = tCla idO [tExt idO] '{' Bloque '}' [Class].
	Con = tCon '(' Expresion ')' '{' Estatuto {Estatuto} '}' {tEif '(' Expresion ')' '{' Estatuto {Estatuto} '}'}.
	Con2 = tEls '{' Estatuto {Estatuto} '}'.
	ConG = Con [Con2].
	Constructor = idC '(' [Param] ')' '{' {Init} '}'.
	CTE = cteS | cteI | cteD | cteB.
	CTES = idV | CTE.
	Decl = (New | Tipo idV( '=' CTES | Arr) {',' idV( '=' CTES | Arr)}) ';'.
	Esc = tEsc '(' Expresion {'^' Expresion} ')' ';'.
	Estatuto = (idV (Asig | Reg)) | Metodo ';' | Ciclo | Esc | Lec | ConG.
	Exp = Termino [('+' | '-') Termino].
	ExpOY = Expresion [('&' | '|') Expresion].
	Expresion = Exp [(tMay | tMen | tDif | '<' | '>' | tEqu) Exp].
	Factor =  ['~'|'-'] ('(' ExpOY ')' | idV [Reg|Arr] | CTE | Metodo).
	Init = idV '=' CTES ';'.
	Lec = tLec '(' idV ')' ';'.
	Lista = idV [',' Lista].
	Main = tMai '(' ')' '{' {Decl} {Estatuto} '}'.
	Metodo = idM '(' [Lista] ')'.
	MetodoR = Tipo idM '(' [Param] ')' '{' {Decl} {Estatuto} Return '}'.
	MetodoV = tVoi idM '(' [Param] ')' '{' {Decl} {Estatuto} '}'.
	New = idO idV '=' tNew idC '(' [Lista] ')'.
	Param = Tipo idV [',' Param].
	Reg = '.' (Metodo | idV).
	Return = tRet Expresion ';'.
	Termino = Factor [('*' | '/' | '%') Factor].
	Tipo = tInt | tDou | tStr | tBoo.
	Vis = tPub | tPri | tPro.
END Solstice.	
