CompiladorSolstice/CompiladorSolstice/Parser.cpp


#include <wchar.h>
#include "Parser.h"
#include "Scanner.h"




void Parser::SynErr(int n) {
	if (errDist >= minErrDist) errors->SynErr(la->line, la->col, n);
	errDist = 0;
}

void Parser::SemErr(const wchar_t* msg) {
	if (errDist >= minErrDist) errors->Error(t->line, t->col, msg);
	errDist = 0;
}

void Parser::Get() {
	for (;;) {
		t = la;
		la = scanner->Scan();
		if (la->kind <= maxT) { ++errDist; break; }
		if (la->kind == _comentarios) {
		}

		if (dummyToken != t) {
			dummyToken->kind = t->kind;
			dummyToken->pos = t->pos;
			dummyToken->col = t->col;
			dummyToken->line = t->line;
			dummyToken->next = NULL;
			coco_string_delete(dummyToken->val);
			dummyToken->val = coco_string_create(t->val);
			t = dummyToken;
		}
		la = t;
	}
}

void Parser::Expect(int n) {
	if (la->kind==n) Get(); else { SynErr(n); }
}

void Parser::ExpectWeak(int n, int follow) {
	if (la->kind == n) Get();
	else {
		SynErr(n);
		while (!StartOf(follow)) Get();
	}
}

bool Parser::WeakSeparator(int n, int syFol, int repFol) {
	if (la->kind == n) {Get(); return true;}
	else if (StartOf(repFol)) {return false;}
	else {
		SynErr(n);
		while (!(StartOf(syFol) || StartOf(repFol) || StartOf(0))) {
			Get();
		}
		return StartOf(syFol);
	}
}

void Parser::Solstice() {
		c = Cubo(); availNum = 0;
		Class();
		Main();
}

void Parser::Class() {
		string ext = "";
		Expect(_tCla);
		Expect(_idO);
		className = conv(t->val); 
		if (la->kind == _tExt) {
			Get();
			Expect(_idO);
			ext = conv(t->val);
		}
		Expect(40 /* "{" */);
		Bloque();
		Expect(41 /* "}" */);
		if(dirGral.find(className) == dirGral.end()){
		dirGral.insert(TABLE::value_type(className, ClassStruct(ext, dirProc)));
		className = "";
		dirProc.clear();
		}
		if (la->kind == _tCla) {
			Class();
		}
}

void Parser::Main() {
		Expect(_tMai);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(3, MAIN, 0)));
		vis = type = -1;
		} else {
		cout << "CANNOT DECLARE MORE THAN ONE MAIN." << '\n';
		err = TRUE;
		}
		
		Expect(38 /* "(" */);
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		while (StartOf(1)) {
			Decl();
		}
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
		if(dirGral.find("main") == dirGral.end()){
		dirGral.insert(TABLE::value_type("main", ClassStruct("", dirProc)));
		dirProc.clear();
		}
}

void Parser::Arr() {
		Expect(34 /* "[" */);
		if (la->kind == _idV) {
			Get();
		} else if (la->kind == _cteI) {
			Get();
		} else SynErr(56);
		Expect(35 /* "]" */);
		dim = 1; 
}

void Parser::Asig() {
		if (la->kind == _tInc || la->kind == _tDec || la->kind == 37 /* "=" */) {
			if (la->kind == _tInc) {
				Get();
			} else if (la->kind == _tDec) {
				Get();
			} else {
				Asig2();
			}
		} else if (la->kind == 34 /* "[" */) {
			Arr();
			Asig2();
		} else SynErr(57);
		Expect(36 /* ";" */);
}

void Parser::Asig2() {
		Expect(37 /* "=" */);
		ExpOY();
}

void Parser::ExpOY() {
		Expresion();
		while (la->kind == 46 /* "&" */ || la->kind == 47 /* "|" */) {
			if(!oper.empty() && (oper.top() == AND || 
			oper.top() == OR)){
			CVariable o2 = operandos.top();
			operandos.pop();
			CVariable o1 = operandos.top();
			operandos.pop();
			int op = oper.top();
			oper.pop();
			if(c.cubo[o1.var_type][o2.var_type][op] != -1){
			gen.push_back(Cuadruplo(op,o1.name,o2.name, avail()));
			operandos.push(CVariable(avail(),c.cubo[o1.var_type][o2.var_type][op],0));
			availNum++;
			} else {
			cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
			err = TRUE;
			}
			}
			
			if (la->kind == 46 /* "&" */) {
				Get();
				oper.push(AND); 
			} else {
				Get();
				oper.push(OR); 
			}
			Expresion();
		}
		if(!oper.empty() && (oper.top() == AND || 
		oper.top() == OR)){
		CVariable o2 = operandos.top();
		operandos.pop();
		CVariable o1 = operandos.top();
		operandos.pop();
		int op = oper.top();
		oper.pop();
		if(c.cubo[o1.var_type][o2.var_type][op] != -1){
		gen.push_back(Cuadruplo(op,o1.name,o2.name, avail()));
		operandos.push(CVariable(avail(),c.cubo[o1.var_type][o2.var_type][op],0));
		availNum++;
		} else {
		cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
		err = TRUE;
		}
		}
		
}

void Parser::Atributo() {
		Vis();
		Tipo();
		Expect(_idV);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(vis, type, 0)));
		name = "";
		vis = type = -1;
		} else {
		cout << "PREVIOUSLY DECLARED ATTRIBUTE: " << name << '\n';
		err = TRUE;
		}
		
		Expect(36 /* ";" */);
}

void Parser::Vis() {
		if (la->kind == _tPub) {
			Get();
			vis = PUBLIC; 
		} else if (la->kind == _tPri) {
			Get();
			vis = PRIVATE; 
		} else if (la->kind == _tPro) {
			Get();
			vis = PROTECT; 
		} else SynErr(58);
}

void Parser::Tipo() {
		if (la->kind == _tInt) {
			Get();
			type = INT; 
		} else if (la->kind == _tDou) {
			Get();
			type = DOUBLE; 
		} else if (la->kind == _tStr) {
			Get();
			type = STRING; 
		} else if (la->kind == _tBoo) {
			Get();
			type = BOOLEAN; 
		} else SynErr(59);
}

void Parser::Bloque() {
		Atributo();
		while (la->kind == _tPub || la->kind == _tPri || la->kind == _tPro) {
			Atributo();
		}
		Constructor();
		while (la->kind == _tPub || la->kind == _tPri || la->kind == _tPro) {
			Vis();
			if (StartOf(3)) {
				MetodoR();
			} else if (la->kind == _tVoi) {
				MetodoV();
			} else SynErr(60);
		}
}

void Parser::Constructor() {
		Expect(_idC);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(PUBLIC, OBJECT, 1)));
		vis = type = -1;
		} else {
		cout << "CANNOT DECLARE MORE THAN ONE CONSTRUCTOR." << '\n';
		err = TRUE;
		}
		
		Expect(38 /* "(" */);
		if (StartOf(3)) {
			Param();
		}
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		while (la->kind == _idV) {
			Init();
		}
		Expect(41 /* "}" */);
}

void Parser::MetodoR() {
		Tipo();
		Expect(_idM);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(vis, type, 1)));
		vis = type = -1;
		} else {
		cout << "PREVIOUSLY DECLARED METHOD: " << name << '\n';
		err = TRUE;
		}
		
		Expect(38 /* "(" */);
		if (StartOf(3)) {
			Param();
		}
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		while (StartOf(1)) {
			Decl();
		}
		while (StartOf(2)) {
			Estatuto();
		}
		Return();
		Expect(41 /* "}" */);
		name = "";
}

void Parser::MetodoV() {
		Expect(_tVoi);
		Expect(_idM);
		name = conv(t->val);
		if(dirProc.find(name) == dirProc.end()){
		dirProc.insert(CTABLE::value_type(name, Attribute(vis, VOID, 1)));
		vis = type = -1;
		} else {
		cout << "PREVIOUSLY DECLARED METHOD: " << name << '\n';
		err = TRUE;
		}
		
		Expect(38 /* "(" */);
		if (StartOf(3)) {
			Param();
		}
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		while (StartOf(1)) {
			Decl();
		}
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
		name = "";
}

void Parser::Ciclo() {
		Expect(_tWhi);
		Expect(38 /* "(" */);
		ExpOY();
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
}

void Parser::Estatuto() {
		switch (la->kind) {
		case _idV: {
			Get();
			string temp = conv(t->val); 
			if((dirProc.find(temp) == dirProc.end()) && (dirProc[name].vars.find(temp) == dirProc[name].vars.end())){
			cout << "UNDECLARED VARIABLE: " << temp << '\n';
			err = TRUE;
			}
			
			if (StartOf(4)) {
				Asig();
			} else if (la->kind == 51 /* "." */) {
				Reg();
			} else SynErr(61);
			break;
		}
		case _idM: {
			Metodo();
			Expect(36 /* ";" */);
			break;
		}
		case _tWhi: {
			Ciclo();
			break;
		}
		case _tEsc: {
			Esc();
			break;
		}
		case _tLec: {
			Lec();
			break;
		}
		case _tCon: {
			ConG();
			break;
		}
		default: SynErr(62); break;
		}
}

void Parser::Con() {
		Expect(_tCon);
		Expect(38 /* "(" */);
		ExpOY();
		Expect(39 /* ")" */);
		Expect(40 /* "{" */);
		Estatuto();
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
		while (la->kind == _tEif) {
			Get();
			Expect(38 /* "(" */);
			ExpOY();
			Expect(39 /* ")" */);
			Expect(40 /* "{" */);
			Estatuto();
			while (StartOf(2)) {
				Estatuto();
			}
			Expect(41 /* "}" */);
		}
}

void Parser::Con2() {
		Expect(_tEls);
		Expect(40 /* "{" */);
		Estatuto();
		while (StartOf(2)) {
			Estatuto();
		}
		Expect(41 /* "}" */);
}

void Parser::ConG() {
		Con();
		if (la->kind == _tEls) {
			Con2();
		}
}

void Parser::Param() {
		string nameL; 
		Tipo();
		Expect(_idV);
		nameL = conv(t->val);
		if((dirProc.find(nameL) == dirProc.end()) && (dirProc[name].vars.find(nameL) == dirProc[name].vars.end())){
		dirProc[name].vars.insert(VMAP::value_type(nameL, Variable(type, 0)));
		} else {
		cout << "PREVIOUSLY DECLARED VARIABLE: " << nameL << '\n';
		err = TRUE;
		}
		
		if (la->kind == 42 /* "," */) {
			Get();
			Param();
		}
}

void Parser::Init() {
		Expect(_idV);
		string temp = conv(t->val); 
		if((dirProc.find(temp) == dirProc.end()) && (dirProc[name].vars.find(temp) == dirProc[name].vars.end())){
		cout << "UNDECLARED VARIABLE: " << temp << '\n';
		err = TRUE;
		}
		
		Expect(37 /* "=" */);
		CTES();
		Expect(36 /* ";" */);
}

void Parser::CTE() {
		if (la->kind == _cteS) {
			Get();
			ctype = 2; 
		} else if (la->kind == _cteI) {
			Get();
			ctype = 0; 
		} else if (la->kind == _cteD) {
			Get();
			ctype = 1; 
		} else if (la->kind == _cteB) {
			Get();
			ctype = 3; 
		} else SynErr(63);
}

void Parser::CTES() {
		if (la->kind == _idV) {
			Get();
		} else if (StartOf(5)) {
			CTE();
		} else SynErr(64);
}

void Parser::Decl() {
		string nameL;
		if (la->kind == _idO) {
			New();
		} else if (StartOf(3)) {
			Tipo();
			Expect(_idV);
			nameL = conv(t->val); 
			if (la->kind == 37 /* "=" */) {
				Get();
				CTES();
			} else if (la->kind == 34 /* "[" */) {
				Arr();
			} else SynErr(65);
			if(( dirProc.find(nameL) == dirProc.end()) && 
			(dirProc[name].vars.find(nameL) == dirProc[name].vars.end())){
			dirProc[name].vars.insert(VMAP::value_type(nameL, Variable(type, dim)));
			dim = 0;
			} else {
			cout << "PREVIOUSLY DECLARED VARIABLE: " << nameL << '\n';
			err = TRUE;
			}
			
			while (la->kind == 42 /* "," */) {
				Get();
				Expect(_idV);
				nameL = conv(t->val); 
				if (la->kind == 37 /* "=" */) {
					Get();
					CTES();
				} else if (la->kind == 34 /* "[" */) {
					Arr();
				} else SynErr(66);
				if(( dirProc.find(nameL) == dirProc.end()) && 
				(dirProc[name].vars.find(nameL) == dirProc[name].vars.end())){
				dirProc[name].vars.insert(VMAP::value_type(nameL, Variable(type, dim)));
				dim = 0;
				} else {
				cout << "PREVIOUSLY DECLARED VARIABLE: " << nameL << '\n';
				err = TRUE;
				}
				
			}
		} else SynErr(67);
		Expect(36 /* ";" */);
}

void Parser::New() {
		string nameL; 
		Expect(_idO);
		Expect(_idV);
		nameL = conv(t->val);
		if((dirProc.find(nameL) == dirProc.end()) && (dirProc[name].vars.find(nameL) == dirProc[name].vars.end())){
		dirProc[name].vars.insert(VMAP::value_type(nameL, Variable(4, 0)));
		} else {
		cout << "PREVIOUSLY DECLARED VARIABLE: " << nameL << '\n';
		err = TRUE;
		}
		
		Expect(37 /* "=" */);
		Expect(_tNew);
		Expect(_idC);
		Expect(38 /* "(" */);
		if (StartOf(6)) {
			Lista();
		}
		Expect(39 /* ")" */);
}

void Parser::Esc() {
		Expect(_tEsc);
		Expect(38 /* "(" */);
		ExpOY();
		while (la->kind == 43 /* "^" */) {
			Get();
			ExpOY();
		}
		Expect(39 /* ")" */);
		Expect(36 /* ";" */);
}

void Parser::Reg() {
		Expect(51 /* "." */);
		if (la->kind == _idM) {
			Metodo();
		} else if (la->kind == _idV) {
			Get();
		} else SynErr(68);
}

void Parser::Metodo() {
		Expect(_idM);
		Expect(38 /* "(" */);
		if (StartOf(6)) {
			Lista();
		}
		Expect(39 /* ")" */);
}

void Parser::Lec() {
		Expect(_tLec);
		Expect(38 /* "(" */);
		Expect(_idV);
		Expect(39 /* ")" */);
		Expect(36 /* ";" */);
}

void Parser::Exp() {
		Termino();
		while (la->kind == 44 /* "+" */ || la->kind == 45 /* "-" */) {
			if(!oper.empty() && (oper.top() == SUM || 
			oper.top() == SUB)){
			CVariable o2 = operandos.top();
			operandos.pop();
			CVariable o1 = operandos.top();
			operandos.pop();
			int op = oper.top();
			oper.pop();
			if(c.cubo[o1.var_type][o2.var_type][op] != -1){
			gen.push_back(Cuadruplo(op,o1.name,o2.name, avail()));
			operandos.push(CVariable(avail(),c.cubo[o1.var_type][o2.var_type][op],0));
			availNum++;
			} else {
			cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
			err = TRUE;
			}
			}
			
			if (la->kind == 44 /* "+" */) {
				Get();
				oper.push(SUM); 
			} else {
				Get();
				oper.push(SUB); 
			}
			Termino();
		}
		if(!oper.empty() && (oper.top() == SUM || 
		oper.top() == SUB)){
		CVariable o2 = operandos.top();
		operandos.pop();
		CVariable o1 = operandos.top();
		operandos.pop();
		int op = oper.top();
		oper.pop();
		if(c.cubo[o1.var_type][o2.var_type][op] != -1){
		gen.push_back(Cuadruplo(op,o1.name,o2.name, avail()));
		operandos.push(CVariable(avail(),c.cubo[o1.var_type][o2.var_type][op],0));
		availNum++;
		} else {
		cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
		err = TRUE;
		}
		}
		
}

void Parser::Termino() {
		Factor();
		while (la->kind == 52 /* "*" */ || la->kind == 53 /* "/" */ || la->kind == 54 /* "%" */) {
			if(!oper.empty() && (oper.top() == MUL || 
			oper.top() == DIV || 
			oper.top() == MOD)){
			CVariable o2 = operandos.top();
			operandos.pop();
			CVariable o1 = operandos.top();
			operandos.pop();
			int op = oper.top();
			oper.pop();
			if(c.cubo[o1.var_type][o2.var_type][op] != -1){
			gen.push_back(Cuadruplo(op,o1.name,o2.name, avail()));
			operandos.push(CVariable(avail(),c.cubo[o1.var_type][o2.var_type][op],0));
			availNum++;
			} else {
			cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
			err = TRUE;
			}
			}
			
			if (la->kind == 52 /* "*" */) {
				Get();
				oper.push(MUL); 
			} else if (la->kind == 53 /* "/" */) {
				Get();
				oper.push(DIV); 
			} else {
				Get();
				oper.push(MOD); 
			}
			Factor();
		}
		if(!oper.empty() && (oper.top() == MUL || 
		oper.top() == DIV || 
		oper.top() == MOD)){
		CVariable o2 = operandos.top();
		operandos.pop();
		CVariable o1 = operandos.top();
		operandos.pop();
		int op = oper.top();
		oper.pop();
		if(c.cubo[o1.var_type][o2.var_type][op] != -1){
		gen.push_back(Cuadruplo(op,o1.name,o2.name, avail()));
		operandos.push(CVariable(avail(),c.cubo[o1.var_type][o2.var_type][op],0));
		availNum++;
		} else {
		cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
		err = TRUE;
		}
		}
		
}

void Parser::Expresion() {
		Exp();
		if (StartOf(7)) {
			if(!oper.empty() && (oper.top() == GEQ || 
			oper.top() == LEQ || oper.top() == DIF ||
			oper.top() == LT || oper.top() == GT ||
			oper.top() == EQ)){
			CVariable o2 = operandos.top();
			operandos.pop();
			CVariable o1 = operandos.top();
			operandos.pop();
			int op = oper.top();
			oper.pop();
			if(c.cubo[o1.var_type][o2.var_type][op] != -1){
			gen.push_back(Cuadruplo(op,o1.name,o2.name, avail()));
			operandos.push(CVariable(avail(),c.cubo[o1.var_type][o2.var_type][op],0));
			availNum++;
			} else {
			cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
			err = TRUE;
			}
			}
			
			switch (la->kind) {
			case _tMay: {
				Get();
				oper.push(GEQ); 
				break;
			}
			case _tMen: {
				Get();
				oper.push(LEQ); 
				break;
			}
			case _tDif: {
				Get();
				oper.push(DIF); 
				break;
			}
			case 48 /* "<" */: {
				Get();
				oper.push(LT); 
				break;
			}
			case 49 /* ">" */: {
				Get();
				oper.push(GT); 
				break;
			}
			case _tEqu: {
				Get();
				oper.push(EQ); 
				break;
			}
			}
			Exp();
		}
		if(!oper.empty() && (oper.top() == GEQ || 
		oper.top() == LEQ || oper.top() == DIF ||
		oper.top() == LT || oper.top() == GT ||
		oper.top() == EQ)){
		CVariable o2 = operandos.top();
		operandos.pop();
		CVariable o1 = operandos.top();
		operandos.pop();
		int op = oper.top();
		oper.pop();
		if(c.cubo[o1.var_type][o2.var_type][op] != -1){
		gen.push_back(Cuadruplo(op,o1.name,o2.name, avail()));
		operandos.push(CVariable(avail(),c.cubo[o1.var_type][o2.var_type][op],0));
		availNum++;
		} else {
		cout << "TYPE MISMATCH! :" << o1.name << '\t' << o2.name << '\n';
		err = TRUE;
		}
		}
		
}

void Parser::Factor() {
		if (la->kind == 45 /* "-" */ || la->kind == 50 /* "~" */) {
			if (la->kind == 50 /* "~" */) {
				Get();
			} else {
				Get();
			}
		}
		if (la->kind == 38 /* "(" */) {
			Get();
			oper.push(99);
			ExpOY();
			Expect(39 /* ")" */);
			oper.pop();
		} else if (la->kind == _idV) {
			Get();
			string temp = conv(t->val);
			if(dirProc.find(temp) != dirProc.end()){
			operandos.push(CVariable(temp, dirProc.find(temp)->second.att_type, dirProc.find(temp)->second.att_mtd));
			} else if(dirProc[name].vars.find(temp) != dirProc[name].vars.end()){
			operandos.push(CVariable(temp, dirProc[name].vars.find(temp)->second.var_type, dirProc[name].vars.find(temp)->second.var_dim));
			} else {
			cout << "UNDECLARED VARIABLE: " << temp << '\n';
			err = true;
			}
			
			if (la->kind == 34 /* "[" */ || la->kind == 51 /* "." */) {
				if (la->kind == 51 /* "." */) {
					Reg();
				} else {
					Arr();
				}
			}
		} else if (StartOf(5)) {
			CTE();
			string temp = conv(t->val);
			operandos.push(CVariable(temp, ctype, 0));
			
		} else if (la->kind == _idM) {
			Metodo();
		} else SynErr(69);
}

void Parser::Lista() {
		CTES();
		if (la->kind == 42 /* "," */) {
			Get();
			Lista();
		}
}

void Parser::Return() {
		Expect(_tRet);
		ExpOY();
		Expect(36 /* ";" */);
}




// If the user declared a method Init and a mehtod Destroy they should
// be called in the contructur and the destructor respctively.
//
// The following templates are used to recognize if the user declared
// the methods Init and Destroy.

template<typename T>
struct ParserInitExistsRecognizer {
	template<typename U, void (U::*)() = &U::Init>
	struct ExistsIfInitIsDefinedMarker{};

	struct InitIsMissingType {
		char dummy1;
	};
	
	struct InitExistsType {
		char dummy1; char dummy2;
	};

	// exists always
	template<typename U>
	static InitIsMissingType is_here(...);

	// exist only if ExistsIfInitIsDefinedMarker is defined
	template<typename U>
	static InitExistsType is_here(ExistsIfInitIsDefinedMarker<U>*);

	enum { InitExists = (sizeof(is_here<T>(NULL)) == sizeof(InitExistsType)) };
};

template<typename T>
struct ParserDestroyExistsRecognizer {
	template<typename U, void (U::*)() = &U::Destroy>
	struct ExistsIfDestroyIsDefinedMarker{};

	struct DestroyIsMissingType {
		char dummy1;
	};
	
	struct DestroyExistsType {
		char dummy1; char dummy2;
	};

	// exists always
	template<typename U>
	static DestroyIsMissingType is_here(...);

	// exist only if ExistsIfDestroyIsDefinedMarker is defined
	template<typename U>
	static DestroyExistsType is_here(ExistsIfDestroyIsDefinedMarker<U>*);

	enum { DestroyExists = (sizeof(is_here<T>(NULL)) == sizeof(DestroyExistsType)) };
};

// The folloing templates are used to call the Init and Destroy methods if they exist.

// Generic case of the ParserInitCaller, gets used if the Init method is missing
template<typename T, bool = ParserInitExistsRecognizer<T>::InitExists>
struct ParserInitCaller {
	static void CallInit(T *t) {
		// nothing to do
	}
};

// True case of the ParserInitCaller, gets used if the Init method exists
template<typename T>
struct ParserInitCaller<T, true> {
	static void CallInit(T *t) {
		t->Init();
	}
};

// Generic case of the ParserDestroyCaller, gets used if the Destroy method is missing
template<typename T, bool = ParserDestroyExistsRecognizer<T>::DestroyExists>
struct ParserDestroyCaller {
	static void CallDestroy(T *t) {
		// nothing to do
	}
};

// True case of the ParserDestroyCaller, gets used if the Destroy method exists
template<typename T>
struct ParserDestroyCaller<T, true> {
	static void CallDestroy(T *t) {
		t->Destroy();
	}
};

void Parser::Parse() {
	t = NULL;
	la = dummyToken = new Token();
	la->val = coco_string_create(L"Dummy Token");
	Get();
	Solstice();
	Expect(0);
}

Parser::Parser(Scanner *scanner) {
	maxT = 55;

	//ParserInitCaller<Parser>::CallInit(this);
	dummyToken = NULL;
	t = la = NULL;
	minErrDist = 2;
	errDist = minErrDist;
	this->scanner = scanner;
	errors = new Errors();
}

bool Parser::StartOf(int s) {
	const bool T = true;
	const bool x = false;

	static bool set[8][57] = {
		{T,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,x,T, x,x,x,x, x,x,x,x, x,x,T,T, T,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,T,T,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, T,x,x,T, x,x,T,T, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,x,x, x,x,x,x, x,x,x,x, x,x,T,T, T,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, T,T,x,x, x,x,T,x, x,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,x,x, x,T,T,T, T,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,T,x,x, x,T,T,T, T,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x},
		{x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,x,x, x,x,T,T, T,T,x,x, x,x,x,x, x,x,x,x, x,x,x,x, T,T,x,x, x,x,x,x, x}
	};



	return set[s][la->kind];
}

Parser::~Parser() {
	ParserDestroyCaller<Parser>::CallDestroy(this);
	delete errors;
	delete dummyToken;
}

Errors::Errors() {
	count = 0;
}
